--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 
   <body>
 
-    <div class="full-height row middle-xs">
-      <div class="col-xs-12">
-        <h1 class="text-center">Yes</h1>
-        <p class="text-center">We are currently involved in the
-          <a class="text-color-2" href="https://en.wikipedia.org/wiki/Military_intervention_against_ISIL">Military intervention against ISIL</a>
+    <div class="full-height row end-xs bg-war">
+      <div class="col-xs-12 col-md-6 col-lg-4" style="margin: 80px 0 0 0">
+        <div class="col-xs-12">
+          <h1 class="text-center">Yes</h1>
+          <p class="text-center">We are currently involved in the
+            <a class="text-color-2" href="https://en.wikipedia.org/wiki/Military_intervention_against_ISIL">Military intervention against ISIL</a>
+        </div>
       </div>
+      <div class="col-lg-1 hidden-md"></div>
     </div>
 
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
