--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="col-xs-12">
           <h1 class="text-center">Yes</h1>
           <p class="text-center">We are currently involved in the
-            <a class="text-color-2" href="https://en.wikipedia.org/wiki/Military_intervention_against_ISIL">Military intervention against ISIL</a>
+            <a class="" href="https://en.wikipedia.org/wiki/Military_intervention_against_ISIL">Military intervention against ISIL</a>
         </div>
       </div>
       <div class="col-lg-1 hidden-md"></div>
